# lol-ingame-playerinfo-parser

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/ddragon/: item.rs  mod.rs
src/lcu/: allgamedata.rs  mod.rs
