[package]
name = "playerPurchases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.8"
serde_json = "1.0.74"
cached = "0.26.2"
tokio-tungstenite = "0.16.1"
crossbeam-channel = "0.5.1"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]